# LinuxShell

./: 'assignment-3'.cbp  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  Questions.txt  README.md  app.cpp  app.h  cmake_install.cmake  grade.md  main.cpp  report.md  utilities.cpp  utilities.h
Testing/Temporary/: CTestCostData.txt  LastTest.log.tmp
tests/: test-background-execution.sh  test-correct-execution.sh  test-nonexistent-program.sh  test-parallel-execution.sh  testapp.py  testapp1.py  testapp2.py
